feat: department docs
